agregado plantillas de vistas para subir partes xhtml

--- a/src/main/webapp/WEB-INF/plantillas/cabecera.xhtml
+++ b/src/main/webapp/WEB-INF/plantillas/cabecera.xhtml
@@ -6,7 +6,7 @@
         <div class="container" style="padding:0px">
             <!-- COMPRIMIR MENU-->
 
-            <div class="nav-no-collapse navbar-left pull-left hidden-sm hidden-xs" style="background-color: #2980b9" >
+<!--            <div class="nav-no-collapse navbar-left pull-left hidden-sm hidden-xs" style="background-color: #2980b9" >
                 <ul class="nav navbar-nav navbar-left">
                     <li>
                         <a class="btn" id="make-small-nav">
@@ -14,11 +14,11 @@
                         </a>
                     </li>
                 </ul>
-            </div>
-            <a href="index.xhtml?s=ini" id="logo" class="navbar-brand" style="background-color: #2980b9">
+            </div>-->
+<!--            <a href="index.xhtml?s=ini" id="logo" class="navbar-brand" style="background-color: #2980b9">
                 <img src="resources/img/logo_transparente.png" class="normal-logo logo-white"/>
                 <span>#{msg.cabecera_tienda}</span>
-            </a>
+            </a>-->
             <div class="clearfix">
                 <!-- MENU COLLAPSADO-->
                 <button class="navbar-toggle" data-target=".navbar-ex1-collapse" data-toggle="collapse" type="button">
