--- a/src/main/webapp/WEB-INF/plantillas/plantillaReal.xhtml
+++ b/src/main/webapp/WEB-INF/plantillas/plantillaReal.xhtml
@@ -7,9 +7,9 @@
         <ui:include src="./cabecera.xhtml" />
     </ui:define>
 
-    <ui:define name="left">
+<!--    <ui:define name="left">
         <ui:include src="./menu.xhtml" />
-    </ui:define>
+    </ui:define>-->
 
     <ui:define name="bottom">
         <ui:include src="./pie.xhtml" />
