--- a/src/main/webapp/WEB-INF/plantillas/plantilla.xhtml
+++ b/src/main/webapp/WEB-INF/plantillas/plantilla.xhtml
@@ -41,12 +41,12 @@
                 <ui:insert name="top">Top</ui:insert>
             </div>
             <div id="page-wrapper" class="container">
-                <div class="row">
+                <!--<div class="row">-->
 
-                    <div id="left">
+<!--                    <div id="left">
                         <ui:insert name="left">Left</ui:insert>
-                    </div>
-                    <div id="content-wrapper">
+                    </div>-->
+                    <div id="row">
                         <div class="row">
                             <div id="content" class="col-lg-12">
                                 <ui:insert name="content">Content</ui:insert>
@@ -57,7 +57,7 @@
                             <ui:insert name="bottom">Bottom</ui:insert>
                         </div>
                     </div>
-                </div>
+                <!--</div>-->
             </div>
 
         </h:body>
