--- a/src/main/webapp/WEB-INF/plantillas/plantilla.xhtml
+++ b/src/main/webapp/WEB-INF/plantillas/plantilla.xhtml
@@ -5,7 +5,6 @@
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:f="http://xmlns.jcp.org/jsf/core">
 
-    <f:view locale="#{idiomaBean.idioma}">
         <h:head>
             <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <!--        <h:outputStylesheet name="${request.contextPath}/resources/css/default.css"/>
@@ -32,8 +31,8 @@
 
             
             
-            <title>Tienda Virtual</title>
-            <link type="image/x-icon" href="resources/img/logo_transparente_title.png" rel="shortcut icon"></link>
+            <title>BBVA Continental</title>
+            <link type="image/x-icon" href="resources/img/logoPestañaBBVA.jpg" rel="shortcut icon"></link>
         </h:head>
 
         <h:body styleClass="theme-whbl pace-done">
@@ -61,5 +60,4 @@
             </div>
 
         </h:body>
-    </f:view>  
 </html>
