mejoras vistas - integracion

--- a/src/main/webapp/WEB-INF/plantillas/pie.xhtml
+++ b/src/main/webapp/WEB-INF/plantillas/pie.xhtml
@@ -2,7 +2,7 @@
     <!-- footer -->
     <footer id="footer-bar" class="row">
         <p id="footer-copyright" class="col-xs-12">
-            &#169; 2017 Proyecto realizado por: Ronald Ramos | Ivan Murga | Johnny Prado | Ruben Ynocente
+            &#169; 2017 Proyecto realizado por: Ronald Ramos | Willian  Vite| Thalia Diaz | Erickzon Torres | Gerson Purisaca | Kevin Lacunza
         </p>
     </footer>
 </ui:component>
