--- a/src/main/webapp/vista3.xhtml
+++ b/src/main/webapp/vista3.xhtml
@@ -10,8 +10,70 @@
     <ui:define name="content">
 
         <h:form>
-            <h2>vista 3</h2>   
-            <h:commandButton styleClass="btn btn-success col-xs-12" value="vista 4" action="vista4" />
+            <br></br>
+            <br></br>
+            <div class="row">
+                <div class="col-sm-8 col-sm-offset-2 text">
+                    <h1><center>Elije tu tarjeta</center></h1>
+                    <div class="description">
+
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-6 col-sm-offset-3 form-box">
+                    <h:form>   
+                        <div class="form-top">
+                            <div class="form-top-left">
+                            </div>
+
+                        </div>
+                        <div class="form-bottom">
+
+                            <div class="radio">
+                                <input type="radio" name="optionsRadios" id="optionsRadios1" value="option1" checked=""></input>
+                                <label for="optionsRadios1">
+                                    Visa Numero de tarjeta 55433212121212121<br></br>
+                                    Saldo disponible: S/ 43232.31
+                                </label>
+                            </div>
+
+                            <div class="radio">
+                                <input type="radio" name="optionsRadios" id="optionsRadios1" value="option1" checked=""></input>
+                                <label for="optionsRadios1">
+                                    Visa Numero de tarjeta 55433212121212121<br></br>
+                                    Saldo disponible: S/ 100.31
+                                </label>
+                            </div>
+
+                            <div class="radio">
+                                <input type="radio" name="optionsRadios" id="optionsRadios1" value="option1" checked=""></input>
+                                <label for="optionsRadios1">
+                                    Visa Numero de tarjeta 55433212121212121<br></br>
+                                    Saldo disponible: S/ 100.31
+                                </label>
+                            </div>                        
+                        </div>
+                        <div class="form-group">
+                            <h:commandButton styleClass="btn btn-primary" value="Aceptar" action="#{loginBean.gotoP4}" /> 
+                        </div>
+                    </h:form>
+                </div>
+            </div>
+
+
+
+
+            <!-- Javascript -->
+            <script src="assets/js/jquery-1.11.1.min.js"></script>
+            <script src="assets/bootstrap/js/bootstrap.min.js"></script>
+            <script src="assets/js/jquery.backstretch.min.js"></script>
+            <script src="assets/js/scripts.js"></script>
+
+            <!--[if lt IE 10]>
+                <script src="assets/js/placeholder.js"></script>
+            <![endif]-->
+
         </h:form>
     </ui:define>
 </ui:composition>
