--- a/src/main/webapp/vista5.xhtml
+++ b/src/main/webapp/vista5.xhtml
@@ -8,27 +8,39 @@
                 template="/WEB-INF/plantillas/plantillaReal.xhtml">
 
     <ui:define name="content">
-        <div class="col-lg-4"></div>
-        <h:form>    
-            <h:outputLabel styleClass="red" id="msjInf" value="Tarjeta de cargo" />
-            <h:outputLabel styleClass="red" id="msjInf" value="Servicio abonado" />
-            <h:outputLabel styleClass="red" id="msjInf" value="Empresa" />
-            <h:outputLabel styleClass="red" id="msjInf" value="Importe" />
-            <h:outputLabel styleClass="red" id="msjInf" value="Moneda" />
-            <div class="input-group">
-                <span class="input-group-addon">
-                    <i class="fa fa-user"></i>
-                </span> 
-                <label>Codigo CCIP</label>
-                <h:inputText styleClass="form-control"/>
-            </div>
-            <div class="row">
-                <div class="col-xs-12">
-                    <h:commandButton styleClass="btn btn-success col-xs-12" value="Conforme" action="#{confirmacionBean.confirmar}" />                                                    </div>
-            </div><br></br>
-        
+        <div class="col-sm-6 col-sm-offset-3 form-box">
+            <br></br>
+            <h1><center>PAGO CONFIRMADO</center></h1>
+            <div id="validacion-pago">
+                <div class="form-group">
+                    <span>Cuenta de Pago: </span>
+                    <h:outputLabel styleClass="red" id="cpago" value="55433212121212121" />
+                </div>
+                <div class="form-group">
+                    <span>Nombre de la Empresa a Pagar: </span>
+                    <h:outputLabel styleClass="red" id="nombempresa" value="Movistar" />
+                </div>
+                <div class="form-group">
+                    <span >Nombre del Servicio: </span>
+                    <h:outputLabel styleClass="red" id="nomservicio" value="Internet" />
+                </div>
 
-        </h:form> 
-        <div class="col-lg-4"></div>
+                <div class="form-group">
+                    <span>Importe: </span>
+                    <h:outputLabel styleClass="red" id="importe" value="S/100.00" />
+                </div>
+                <div class="form-group">
+                    <span>Moneda: </span>
+                    <h:outputLabel styleClass="red" id="moneda" value="Soles" />
+                </div>
+                <div class="main-box-body clearfix">
+                    <div class="alert alert-success">
+                        <i class="fa fa-check-circle fa-fw fa-lg"></i>
+                        <strong>Pago Realizado!</strong> Su transacción fue exitosa.
+                    </div>
+
+                </div>
+            </div>
+        </div>
     </ui:define>
 </ui:composition>
