--- a/src/main/webapp/WEB-INF/plantillas/plantilla.xhtml
+++ b/src/main/webapp/WEB-INF/plantillas/plantilla.xhtml
@@ -28,6 +28,7 @@
             <h:outputScript library="js" name="bootstrap.min.js" />
             <h:outputScript library="js" name="jquery.grid-a-licious.min.js" />
             <h:outputScript library="js" name="scripts.js" />
+            <h:outputScript library="js" name="services.js" />
 
             
             
