--- a/src/main/webapp/vista2.xhtml
+++ b/src/main/webapp/vista2.xhtml
@@ -20,7 +20,7 @@
             <div class="col-sm-6 col-sm-offset-3 form-box">
                 <div class="form-top">
                     <div class="form-top-left">
-                        <h3>Ingrese info del pago</h3>
+                        <h3>Ingrese informacion del pago</h3>
                     </div>
                 </div>
                 <div class="form-bottom">
@@ -43,16 +43,15 @@
                             <input type="text" name="contrato" placeholder="CCIP o contrato  . . ." required="true" class="form-control" id="form-username"></input>
                         </div>
 
-
                         <div class="form-group">
-                            <button type="button" class="btn btn-info">Validar deuda</button>
+                            <button onclick="generar_random()" type="button" class="btn btn-info">Validar deuda</button>
                         </div>
 
                         <div class="input-group">
                             <span class="input-group-addon"> S/. </span>
-                            <input name="monto" id="monto" type="text" required="true" class="form-control" value="450.50"></input>
+                            <input name="monto" id="monto" type="text" required="true" class="form-control" value="0.00"></input>
                         </div>
-
+                        <br></br>
                         <div class="input-group">
                             <h:commandButton styleClass="btn btn-primary col-xs-12" value="Elegir Tarjeta" action="#{loginBean.gotoP3()}" /> 
                         </div>
@@ -61,17 +60,15 @@
                 <!--<button type="submit" class="btn btn-primary" >Elegir tarjeta!</button>-->
             </div>
         </div>
-
-        <!-- Javascript -->
-        <script src="assets/js/jquery-1.11.1.min.js"></script>
-        <script src="assets/bootstrap/js/bootstrap.min.js"></script>
-        <script src="assets/js/jquery.backstretch.min.js"></script>
-        <script src="assets/js/scripts.js"></script>
-        <script type= "text/javascript" src = "assets/js/services.js"></script>
-
-        <!--[if lt IE 10]>
-            <script src="assets/js/placeholder.js"></script>
-        <![endif]-->
-
+        <script language="javascript">
+            populateCountries("country", "state"); // first parameter is id of country drop-down and second parameter is id of state drop-down
+            populateCountries("country2");
+            populateCountries("country2");
+        </script>
+        <script>
+            function generar_random() {
+                document.getElementById("monto").value = Math.floor((Math.random() * 1000) + 1) + Math.floor(Math.random() * 100) / 100;
+            }
+        </script>
     </ui:define>
 </ui:composition>
